<resources>
    <string name="app_name">CIKO LIVE</string>
    <string name="by_selecting_agree_and_continue_below">By selecting Agree and continue below,</string>
    <string name="terms_of_use">Terms Of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="i_agree_to">I agree to</string>
    <string name="dim_dim">Dim Dim</string>
    <string name="and">and</string>
    <string name="chats">Chats</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="diamond_wallet">DIAMOND WALLET</string>
    <string name="saved_profiles">SAVED PROFILES</string>
    <string name="share_this_app">SHARE THIS APP</string>
    <string name="be_a_host">BE A HOST</string>
    <string name="log_out">LOG OUT</string>
    <string name="version">v1.3.5</string>
    <string name="delete_my_account">DELETE MY ACCOUNT</string>
    <string name="profiles">Profiles</string>
    <string name="live_streams">Live Streams</string>
    <string name="cancel">Cancel</string>
    <string name="diamonds">Diamonds</string>
    <string name="purchase_dimond_text">You don’t have enough\ndiamonds to continue chatting,\nplease purchase some diamonds\nand enjoy the chatting..</string>
    <string name="buy">Buy</string>
    <string name="are_you">Are you</string>
    <string name="sure">sure</string>
    <string name="delete_account_text">Do you really want\nto delete your account ?\nYou won’t be able to recover it\nlater and data will be lost forever..</string>
    <string name="yes">yes</string>
    <string name="exit">Exit</string>
    <string name="add">ADD</string>
    <string name="comment">Comment...</string>
    <string name="write_here">Write here...</string>
    <string name="diamond">diamond</string>
    <string name="shop">Shop</string>
    <string name="by_continuing_the_purchase_you_agree_to_our">By continuing the purchase you agree to our</string>
    <string name="apply_for_host">APPLY FOR HOST</string>
    <string name="photos">Photos</string>
    <string name="_5_images_of_your_self">(5 Images of your self)</string>
    <string name="videos">VIDEOS</string>
    <string name="minimum_2_videos_of_yourself">(Minimum 2 videos of yourself)</string>
    <string name="age">age</string>
    <string name="enter_your_age">Enter Your Age...</string>
    <string name="original_full_name">ORIGINAL FULL NAME</string>
    <string name="your_full_name">Your Full name...</string>
    <string name="about_yourself">ABOUT YOURSELF</string>
    <string name="visible_for_public">(Visible for public)</string>
    <string name="your_interests">Your Interests</string>
    <string name="eg_sports_music_dance">(Eg : Sports, Music, Dance)</string>
    <string name="bio">BIO</string>
    <string name="_80">/80)</string>
    <string name="availability_hours">Availability hours</string>
    <string name="per_day">(Per Day)</string>
    <string name="billing_address">BILLING ADDRESS</string>
    <string name="for_earnings_invoices">(For earnings invoices)</string>
    <string name="contact_email">CONTACT EMAIL</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions,]]></string>
    <string name="take_me_forward">take me forward</string>
    <string name="submit">Submit</string>
    <string name="host_dashboard">HOST DASHBOARD</string>
    <string name="host_verification">HOST VERIFICATION</string>
    <string name="pending">PENDING</string>
    <string name="you_will_get_calls_from_users_if_this_is_on">You will get calls from users if this is On</string>
    <string name="available_for_calls">Available For Calls</string>
    <string name="go_live">GO LIVE</string>
    <string name="minimum_threshold_50_000">Minimum Threshold : 50,000</string>
    <string name="redeem">REDEEM</string>
    <string name="total_collection">TOTAL COLLECTION</string>
    <string name="redeem_requests">REDEEM REQUESTS</string>
    <string name="history">HISTORY</string>
    <string name="update_profile">Update profile</string>
    <string name="start_the_live">START THE LIVE</string>
    <string name="live_dialog_text">Set the Diamonds price you want to\nkeep for users to join your live.\n Price will be per minute.\n\n You will be charged 100\ndiamonds to start each\nlive stream session</string>
    <string name="_25">25</string>
    <string name="minute">Minute</string>
    <string name="diamonds_">Diamonds:</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="completed">Completed</string>
    <string name="processing">Processing</string>
    <string name="log_out_text">Do you really want to LogOut\nfrom this app?</string>
    <string name="country">Country</string>
    <string name="search_here">Search Here...</string>
    <string name="write_something_about_you">Write Something About You..</string>
    <string name="add_your_bio">Add your Bio...</string>
    <string name="your_address">Your Address..</string>
    <string name="write_your_interests">Write your Interests...</string>
    <string name="email_address">Email Address..</string>
    <string name="desh">-</string>
    <string name="report">Report</string>
    <string name="reason_for_report">Reason for report</string>
    <string name="how_it_hurts_you">How it hurts you</string>
    <string name="report_text">By clicking this submit button, you agree that you are\ntaking all the responsibilities of all the progress that may\nbr done by us or the content uploader.click the link\nbelow to know more about that.</string>
    <string name="global">Global</string>
    <string name="chatting">CHATTING</string>
    <string name="title_activity_submit_redeem">SubmitRedeemActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="title_activity_chatting">ChattingActivity</string>
    <string name="title_activity_redeem_request">RedeemRequestActivity</string>
    <string name="title_activity_diamond_history">DiamondHistoryActivity</string>
    <string name="title_activity_create_profile">CreateProfileActivity</string>
    <string name="title_activity_find_match">FindMatchActivity</string>
    <string name="title_activity_host_main">HostMainActivity</string>
    <string name="title_activity_purchase_diamond">PurchaseDiamondActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_user_call">UserCallActivity</string>
    <string name="title_activity_user_calling">UserCallingActivity</string>
    <string name="title_activity_user_live">UserLiveActivity</string>
    <string name="sender_id">97776</string>
    <string name="menu_chat_info">Chat Info</string>
    <string name="menu_add_users_to_chat">Add Users to Chat</string>
    <string name="menu_leave_chat">Leave Chat</string>
    <string name="menu_delete_chat">Delete Chat</string>
    <string name="menu_dialogs_logout">Logout</string>
    <string name="menu_dialogs_delete">Delete</string>
    <string name="menu_dialogs_app_info">App Info</string>
    <string name="menu_create">Create</string>
    <string name="menu_done">Done</string>
    <string name="menu_finish">Finish</string>
    <string name="menu_send">Send</string>
    <string name="menu_save_attachment">Save attachment</string>
    <string name="menu_message_forward">Forward</string>
    <string name="menu_message_delivered_to">Delivered to…</string>
    <string name="menu_message_viewed_by">Viewed by…</string>
    <string name="menu_file_save">Save File</string>
    <string name="field_name_user_login">User name</string>
    <string name="field_name_user_fullname">User Full Name</string>
    <string name="dlg_loading">Loading</string>
    <string name="dlg_relogin">Relogin</string>
    <string name="dlg_restoring_chat_session">Restoring chat session…</string>
    <string name="dlg_login">Login…</string>
    <string name="dlg_logout">Logout…</string>
    <string name="dlg_retry">Retry</string>
    <string name="dlg_choose_file_from">Select file from…</string>
    <string name="dlg_sending">Sending…</string>
    <string name="create_chat">Creating chat…</string>
    <string name="dlg_deleting_chats">Deleting chats…</string>
    <string name="dlg_updating">Updating…</string>
    <string name="dlg_delete_private_dialog">Delete dialog</string>
    <string name="dlg_delete_private_question">Are you sure you want to leave dialog?</string>
    <string name="dlg_leave_group_dialog">Leave dialog</string>
    <string name="dlg_leave_group_question">Are you sure you want to leave dialog?</string>
    <string name="dlg_leave">Leave</string>
    <string name="dlg_delete">Delete</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="new_chat_created">%s created the group chat \"%s\"</string>
    <string name="occupant_added">%s added %s</string>
    <string name="occupant_left">%s has left</string>
    <string name="chat_still_joining">You\'re still joining a group chat, please wait a bit</string>
    <string name="chat_error_send_message">Can\'t send a message, You are not connected to chat</string>
    <string name="placeholder_username_you">%s (you)</string>
    <string name="error_recreate_session">Login Chat error</string>
    <string name="login_chat_login_error">Login to Chat error. Please relogin. </string>
    <string name="dialogs_logged_in_as">Logged in as %s</string>
    <string name="dialogs_cannot_delete_chat">You can not leave from dialog %s</string>
    <string name="dialogs_creation_error">Dialog creation errors</string>
    <string name="dialogs_deletion_error">Dialog deletion errors</string>
    <string name="dialogs_actionmode_title">Delete Chats</string>
    <string name="dialogs_actionmode_subtitle">%s chats selected</string>
    <string name="dialogs_actionmode_subtitle_single">%s chat selected</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="select_users_search_hint">Search</string>
    <string name="select_users_create_chat_title">New Chat</string>
    <string name="select_users_create_chat_subtitle">%s users selected</string>
    <string name="select_users_create_chat_subtitle_single">%s user selected</string>
    <string name="select_users_edit_chat">Add Occupants</string>
    <string name="select_users_get_users_error">Get users errors</string>
    <string name="select_users_get_dialog_error">Error getting dialog from server</string>
    <string name="select_users_get_users_dialog_error">Error getting users dialog from server</string>
    <string name="select_users_choose_users">Please, choose at least one participant</string>
    <string name="select_users_not_found">No user with that name</string>
    <string name="you">You</string>
    <string name="chat_send">Send</string>
    <string name="chat_edit_text_hint">Send message…</string>
    <string name="chat_send_message_error">Failed to send a message</string>
    <string name="chat_attachment">Attachment</string>
    <string name="chat_empty_you_are_alone_here">You\'re all alone out here.</string>
    <string name="chat_unsupported_type">Unsupported dialog type</string>
    <string name="chat_wait_for_attachments_to_upload">Wait for all attachments to upload</string>
    <string name="notification_title">Quickblox Chat Notification</string>
    <string name="connection_error">Chat connection has been dropped</string>
    <string name="reconnect_alert">Reconnecting in %s seconds</string>
    <string name="reconnect_failed">Reconnecting Failed</string>
    <string name="chat_info_subtitle">%s members</string>
    <string name="chat_info_updating">Updating…</string>
    <string name="message_forwarded_from">Forwarded from\u0020</string>
</resources>