<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".DiamondShopBottomSheet">
    <androidx.cardview.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="470dp"
        android:layout_marginBottom="-30dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardBackgroundColor="@color/dark_and_red"
        app:cardCornerRadius="35dp"
        app:cardElevation="0dp"
        app:cardMaxElevation="0dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:id="@+id/top_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginVertical="20dp"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/diamond"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="19sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"
                    android:text="@string/shop"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="19sp" />


            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@id/lout_bottom"
                android:layout_below="@id/top_bar"
                android:layout_marginHorizontal="15dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:id="@+id/rv_diamond"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:itemCount="5"
                tools:listitem="@layout/item_diamond_shop">


            </androidx.recyclerview.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/lout_bottom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:baselineAligned="true"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="50dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/by_continuing_the_purchase_you_agree_to_our"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_semi_bold"
                        android:text="@string/terms_of_use"
                        android:id="@+id/txtTerms"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="3dp"
                        android:fontFamily="@font/gilroy_regular"
                        android:text="@string/and"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <TextView
                        android:id="@+id/tv_privacyPolicy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/gilroy_semi_bold"
                        android:text="@string/privacy_policy"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>


    </androidx.cardview.widget.CardView>

</androidx.appcompat.widget.LinearLayoutCompat>