<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/transparent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/start_the_live"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="19sp"

                    />


            </LinearLayout>


            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gradiant_500"
                android:padding="15dp"
                android:src="@drawable/ic_live" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="center"
                android:lineSpacingExtra="1dp"
                android:text="@string/live_dialog_text"
                android:textColor="@color/gray"
                android:textSize="13sp"

                />


            <LinearLayout
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="10dp"
                    android:src="@drawable/img_dimond" />


                <EditText
                    android:layout_width="70dp"
                    android:layout_height="wrap_content"

                    android:background="@drawable/bg_cornered_rect_10"
                    android:backgroundTint="@color/bg_chats"
                    android:ellipsize="start"
                    android:fontFamily="@font/gilroy_bold"
                    android:gravity="center"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLines="1"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="12dp"
                    android:text="@string/_25"
                    android:textColor="@color/gray"
                    android:textColorHint="@color/gray_light_pro"
                    android:textSize="19sp" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="15dp"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:gravity="center"
                    android:lineSpacingExtra="1dp"
                    android:text="@string/minute"
                    android:textColor="@color/gray"
                    android:textSize="17sp"

                    />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/btn_start"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:padding="20dp"
                android:background="@drawable/rect6d"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/gilroy_semi_bold"
                    android:text="Start"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />


            </LinearLayout>

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</layout>