<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:outlineSpotShadowColor="@color/transparent"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingHorizontal="10dp"
            android:paddingVertical="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/buy"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="19sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"

                    android:text="@string/diamonds"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="19sp"

                    />


            </LinearLayout>


            <ImageView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/bg_gradiant_500"
                android:paddingHorizontal="20dp"
                android:paddingTop="23dp"
                android:paddingBottom="20dp"
                android:src="@drawable/img_dimond" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="15dp"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="center"
                android:text="@string/purchase_dimond_text"
                android:textColor="@color/gray"
                android:textSize="15sp"

                />


            <LinearLayout
                android:id="@+id/btn_buy"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/bg_gradiant_5"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal"
                android:paddingVertical="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:fontFamily="@font/gilroy_regular"
                    android:text="@string/buy"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_bold"

                    android:text="@string/diamonds"
                    android:textAllCaps="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"

                    />


            </LinearLayout>

            <TextView
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/gilroy_regular"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/gray"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.cardview.widget.CardView>
</layout>